--- a/16.04/Dockerfile
+++ b/16.04/Dockerfile
@@ -9,8 +9,7 @@ RUN apt-get update \
     && apt-get install -y --no-install-recommends \
         systemd \
         systemd-sysv \
-    && apt-get clean \
-    && rm -rf /var/lib/apt/lists/*
+    && apt-get clean
 
 # We never want these to run in a container
 RUN systemctl mask \
