--- a/14.04/Dockerfile
+++ b/14.04/Dockerfile
@@ -1,5 +1,7 @@
 FROM ubuntu:14.04
 
+LABEL maintainer="Wilmar den Ouden <info@wilmardenouden.nl>"
+
 ENV container docker
 ENV DEBIAN_FRONTEND noninteractive
 
