--- a/16.04/Dockerfile
+++ b/16.04/Dockerfile
@@ -1,9 +1,9 @@
 FROM ubuntu:16.04
 
+LABEL maintainer="Wilmar den Ouden <info@wilmardenouden.nl>"
+
 ENV container docker
 ENV DEBIAN_FRONTEND noninteractive
-
-LABEL maintainer="Wilmar den Ouden <info@wilmardenoude.nl>"
 
 RUN apt-get update \
     && apt-get install -y --no-install-recommends \
