fix(16.04): Switch entrypoint to cmd

--- a/16.04/Dockerfile
+++ b/16.04/Dockerfile
@@ -26,4 +26,4 @@ RUN systemctl mask \
 
 STOPSIGNAL SIGRTMIN+3
 
-ENTRYPOINT ["/sbin/init"]
+CMD ["/bin/bash", "-c", "exec /sbin/init --log-target=journal 3>&1"]
